# auth2-api

./: .env  .env.dist  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  drill.yml  tarpaulin-report.html
.github/workflows/: CI.yml
.run/: Serve API.run.xml
.sqlx/: query-00b1f24bcfb5e05757928a572a375e252f7c5526393903de846503293930d1a3.json  query-079baf253155da92d52b10f29df1336eef50dd958db96d33d3555b2415f6251b.json  query-0d811ed50d53bd9ebfae2bad0f9b421138da2cd76b9ae5047adddf659e9e98f7.json  query-206abe9bb9dc03d4f8445eb6e565c3d5de9101dbc49c40de8dbe1d2a92766e62.json  query-247e0aecffc2142ca2ce79bfa867babf3e909a18ecad96db1d0db6e6a3756d75.json  query-2724001e94a13b715b8427805f77192a4f952c70733cc4ea790dfe18cc45981d.json  query-522f4bb90b7e3d890bb3195bd00174ec5a81c77b27aac86fbf29dc8ef866f678.json  query-558890195f386454862b2e4667520aa238a1230b665bbe51b8a70f07d084a4b4.json  query-60afbd6c157441adaf59ab3c375053c699b5de7f85f0ae39ec7168e040b3c555.json  query-6d7620072b66c8a704a9479a1f3d4859e4f1efd026bf71a04dff214c5b988b51.json  query-7c8972e8e29cc030af694fa1ee0ab81dec010e5b5ad61c3c3ce20de27826f0ff.json  query-8459eede8dfdbc35821d2a54b94ad0592e5436766c306db22180ea428e2cb5c5.json  query-939270d3e49f587edadd4735835eb36f0684a44cd731c8a7ed5fb7161b88b2fe.json  query-a28a4a64feb5470cdca6337b7a8e6425ea13d766ce071946548f271d8f92cbcc.json  query-b863311ba361bffc02b62decc2ef3dbb1bef1f5a7616d0b8e6ab79949a78e3f9.json  query-c0f395ed26b7d4ed92c4d302f9ceabef9700e3b7e323b6e3e7d71167c7fa5d60.json  query-c2d0579d8306c55b4a5639fd98d4b705600a64a6a2555cfda2b23bc66c9ee334.json  query-c564e267ab354e34b04865dbc2e6995aab24f3139bffd9811bd468a3bd12847d.json  query-c66ea13456af5b0182238f85cfb2e241f169c9298dc40591673b8b2a71ec7cbf.json  query-c8f71ac0786f54fe3cbf1be377b1a275f112c11de835ba2e1d43af7b14e78763.json  query-d8218146cec9e2b5fdafa11025fa600bb6fc71429a1df21ee70f08bf3ba7cf4c.json  query-dc5cf9bd271624ead82bc71b9fadd4e0965db191eeaa6b6368e572660af7ce32.json  query-ee81387ccd8da7ab48d1fb78c498e0f7e4bfc729eb10ec48a638e14a39933494.json  query-f1a330e7270a7137148e7a04ed807ebe4187676817021c0249674149144cf0dc.json  query-f6d036194aad736c1d3b7149898a30a79c88207b39548d70e2091dc0315b550c.json  query-f6e8135de2527683fd04c4d6439b49a460289b7aef164b96d52090e2858deffa.json  query-f99feb5ccbf833d38e4ec5c0c99450853667fdcf80b9aaa5d47271fb8e9ec1fd.json
assets/documentation/: doc_api_v1.yml
domain/: Cargo.toml
domain/src/: error.rs  lib.rs
domain/src/entities/: user.rs
domain/src/use_cases/: mod.rs
domain/src/value_objects/: email.rs  id.rs  mod.rs  password.rs
migrations/: 20240902083148_create_users_table.up.sql  20240906131519_create_refresh_tokens_table.down.sql  20240906131519_create_refresh_tokens_table.up.sql  20240911093732_create_password_resets_table.down.sql  20240911093732_create_password_resets_table.up.sql  20240917140548_create_applications_table.down.sql  20240917140548_create_applications_table.up.sql  20240930133757_create_scopes_table.down.sql  20240930133757_create_scopes_table.up.sql  20250206085419_create_external_links_table.down.sql  20250206085419_create_external_links_table.up.sql
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  validation.rs
src/: config.rs  lib.rs
src/adapters/: mod.rs
src/adapters/database/: mod.rs
src/adapters/database/mysql/: mod.rs
src/adapters/database/mysql/repositories/: error.rs  mod.rs
src/adapters/database/mysql/repositories/application/: mod.rs  (+1 more)
src/adapters/email/: forgotten_password.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: access_token.rs  application.rs  email.rs  external_link.rs  mod.rs  password_reset.rs  refresh_token.rs  scope.rs  user.rs
src/domain/repositories/: mod.rs
src/domain/repositories/application/: dto.rs  mod.rs
src/domain/repositories/external_link/: dto.rs  mod.rs
src/domain/repositories/password_reset/: dto.rs  mod.rs
src/domain/repositories/refresh_token/: dto.rs  mod.rs
src/domain/repositories/scope/: dto.rs  mod.rs
src/domain/repositories/user/: dto.rs  mod.rs
src/domain/services/: email.rs  mod.rs
src/domain/services/email/: forgotten_password.rs  mod.rs
src/domain/services/security/: jwt.rs  mod.rs  payload.rs
src/domain/tests/: mod.rs
src/domain/tests/mock/: application.rs  external_link.rs  mod.rs  password_reset.rs  refresh_token.rs  scope.rs  user.rs
src/domain/use_cases/: mod.rs
src/domain/use_cases/application/: create_application.rs  delete_application.rs  get_application.rs  get_applications.rs  mod.rs  restore_application.rs  update_application.rs
src/domain/use_cases/database/: clean_expired_refresh_tokens.rs  mod.rs
src/domain/use_cases/external_link/: create_external_link.rs  delete_external_link.rs  get_external_link.rs  get_external_links.rs  mod.rs  restore_external_link.rs  update_external_link.rs
src/domain/use_cases/scope/: create_scope.rs  delete_scope.rs  get_scopes.rs  mod.rs  restore_scope.rs
src/domain/use_cases/user/: clean_expired_refresh_tokens.rs  create_user.rs  delete_user.rs  forgotten_password.rs  get_access_token.rs  get_user.rs  get_users.rs  mod.rs  refresh_token.rs  restore_user.rs  update_password_from_token.rs
src/domain/utils/: mod.rs  query_sort.rs
src/domain/value_objects/: datetime.rs  email.rs  id.rs  mod.rs  pagination.rs  password.rs  query_filter.rs  query_sort.rs  scope_id.rs
src/infrastructure/: mod.rs  routes.http
src/infrastructure/api/: error.rs  errors.rs  extractors.rs  logger.rs  mod.rs  response.rs  routes.rs  server.rs  use_cases.rs
src/infrastructure/api/handlers/: filter.rs  mod.rs  web.rs
src/infrastructure/api/handlers/application/: dto.rs  error.rs  mod.rs
src/infrastructure/api/handlers/external_link/: dto.rs  error.rs  mod.rs
src/infrastructure/api/handlers/scope/: dto.rs  error.rs  mod.rs
src/infrastructure/api/handlers/user/: dto.rs  error.rs  mod.rs
src/infrastructure/api/layers/: auth.rs  basic_auth.rs  logger.rs  mod.rs  state.rs
src/infrastructure/cli/: error.rs  mod.rs  user.rs
src/infrastructure/cli/cmd/: database.rs  mod.rs  user.rs
templates/doc/: api_v1.html
(+8 files in other folders)
