[package]
name = "auth2-api"
description = "API for authentication and authorization"
version = "0.1.0"
edition = "2021"
authors = ["Fabien Bellanger <valentil@gmail.com>"]
repository = "https://github.com/fabienbellanger/auth2-api"
readme = "./README.md"

[[bin]]
name = "auth2-api"
path = "src/bin/main.rs"

[dependencies]

# Serde
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
serde_urlencoded = "0.7.1"

# Errors
thiserror = "1.0.64"

# Logs
log = "0.4.22"
tracing = "0.1.40"

# Metrics
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"

# Tower
tower = { version = "0.5.1", features = ["timeout", "util"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "request-id", "util"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt", "json"] }

# Hyper
hyper = "1.5.0"

# Axum
axum = "0.7.7"

# sqlx
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate"] }

# Email
lettre = "0.11.9"
mime = "0.3.17"

async-trait = "0.1.83"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["clock", "std", "serde"], default-features = false }
jsonwebtoken = "9.3.0"
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
config = "0.14.0"
futures = "0.3.31"
tera = "1.20.0"
http-auth-basic = "0.3.5"
http-body-util = "0.1.2"
argon2 = "0.5.3"
passwords = { version = "3.1.16", features = ["common-password"] }

[dev-dependencies]
fake = { version = "2.10.0", features = ["chrono"] }
pretty_assertions = "1.4.1"
