[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
description = "API for authentication and authorization"
edition = "2024"
name = "auth2-api"
readme = "./README.md"
repository = "https://github.com/fabienbellanger/auth2-api"
rust-version = "1.85"
version = "0.1.0"

[[bin]]
name = "auth2-api"
path = "src/bin/main.rs"

[dependencies]

# Serde
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"

# Errors
thiserror = "2.0.12"

# Logs
log = "0.4.26"
tracing = "0.1.41"

# Metrics
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"

# Tower
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "request-id", "util"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter", "fmt", "json"] }

# Hyper
hyper = "1.6.0"

# Axum
axum = "0.8.1"

# sqlx
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate"] }

# Email
lettre = "0.11.14"
mime = "0.3.17"

async-trait = "0.1.87"
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["clock", "std", "serde"], default-features = false }
jsonwebtoken = "9.3.1"
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.9.0"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
bytes = "1.10.1"
clap = { version = "4.5.31", features = ["cargo", "derive"] }
config = "0.15.9"
futures = "0.3.31"
tera = "1.20.0"
http-auth-basic = "0.3.5"
http-body-util = "0.1.2"
argon2 = "0.5.3"
passwords = { version = "3.1.16", features = ["common-password"] }
regex = "1.11.1"
bytesize = "2.0.1"

[dev-dependencies]
fake = { version = "4.0.0", features = ["chrono"] }
pretty_assertions = "1.4.1"
