[package]
name = "auth2-api-domain"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth2-api-shared = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
pretty_assertions = { workspace = true }
